--- a/src/containers/About/About.scss
+++ b/src/containers/About/About.scss
@@ -61,6 +61,7 @@
 
 .leading-text {
   margin-bottom: 5rem;
+  text-align: left;
   @media screen and (min-width:620px) {
     width: 500px;
     margin: 0 auto;
